fix: update token cache calculation
